# starlette-html-stories

./: .gitignore  CHANGELOG.md  README.md  justfile  pyproject.toml
.github/workflows/: publish.yml
examples/: __init__.py
examples/basic/: README.md  __init__.py  app.py
examples/basic/components/: __init__.py  user_card.py
examples/basic/layouts/: __init__.py  base.py
examples/basic/pages/: __init__.py  home_page.py
examples/basic/stories/: __init__.py  user_card_stories.py
src/starlette_html_stories/: __init__.py  app.py  core.py  decorators.py  discovery.py  html_stories.py
src/starlette_html_stories/static/: .gitignore  stories.css
tests/: __init__.py  app_test.py  discovery_test.py
tools/: __init__.py  app.py  build_css.py  css.py  styles.css
tools/components/: __init__.py  user_card.py
tools/stories/: __init__.py  user_card_stories.py
